<resources>
    <string name="app_name">CalendarTestApp</string>
    <string name="new_task_save_button">Сохранить</string>
    <string name="new_task_date_start_button">Дата начала</string>
    <string name="new_task_date_end_button">Дата окончания</string>
    <string name="new_task_name_label">Название задачи</string>
    <string name="new_task_desc_label">Описание задачи</string>
    <string name="task_selection_screen_chosen_date">"Выбранная дата: "</string>
    <string name="task_info_actionbar_title">Информация о задаче</string>
    <string name="task_select_actionbar_title">Выберите день</string>
    <string name="new_task_actionbar_title">Новая задача</string>

    <string name="placeholder">Hello placeholder</string>
    <string name="new_task_snackbar_no_title">\"Введите название задания\"</string>
</resources>